--- a/zeyuli/zeyuli-job/pom.xml
+++ b/zeyuli/zeyuli-job/pom.xml
@@ -66,6 +66,11 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
 
         <!--  Redis依赖 -->
         <dependency>
