--- a/zeyuli/zeyuli-job/src/main/resources/application.yaml
+++ b/zeyuli/zeyuli-job/src/main/resources/application.yaml
@@ -31,7 +31,7 @@ mybatis:
   configuration:
     auto-mapping-behavior: full
     map-underscore-to-camel-case: true
-  #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   type-aliases-package: com.zeyuli.pojo
   mapper-locations: classpath:/mappers/*.xml
 
